doc/windows/VB6.0/32bit/multi_card/gts.bas


Public Declare Function GT_PrfGear Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, Optional ByVal dir As Integer = 0) As Integer
Public Declare Function GT_SetGearMaster Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal masterIndex As Integer, Optional ByVal masterType As Integer = GEAR_MASTER_PROFILE, Optional ByVal masterItem As Integer = 0) As Integer
Public Declare Function GT_GetGearMaster Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pMasterIndex As Integer, Optional ByRef pMasterType As Integer = 0, Optional ByRef pMasterItem As Integer = 0) As Integer
Public Declare Function GT_SetGearRatio Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal masterEven As Long, ByVal slaveEven As Long, Optional ByVal masterSlope As Long = 0) As Integer
Public Declare Function GT_GetGearRatio Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pMasterEven As Long, ByRef pSlaveEven As Long, Optional ByRef pMasterSlope As Long = 0) As Integer
Public Declare Function GT_GearStart Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long) As Integer
Public Declare Function GT_SetGearEvent Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal gearEvent As Integer, ByVal startPara0 As Long, ByVal startPara1 As Long) As Integer
Public Declare Function GT_GetGearEvent Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pGearEvent As Integer, ByRef startPara0 As Long, ByRef startPara1 As Long) As Integer

Public Declare Function GT_PrfFollow Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, Optional ByVal dir As Integer = 0) As Integer
Public Declare Function GT_SetFollowMaster Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal masterIndex As Integer, Optional ByVal masterType As Integer = FOLLOW_MASTER_PROFILE, Optional ByVal masterItem As Integer = 0) As Integer
Public Declare Function GT_GetFollowMaster Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pMasterIndex As Integer, Optional ByRef pMasterType As Integer = 0, Optional ByRef pMasterItem As Integer = 0) As Integer
Public Declare Function GT_SetFollowLoop Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal followLoop As Long) As Integer
Public Declare Function GT_GetFollowLoop Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pLoop As Long) As Integer
Public Declare Function GT_SetFollowEvent Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal followEvent As Integer, ByVal masterDir As Integer, Optional ByVal pos As Long = 0) As Integer
Public Declare Function GT_GetFollowEvent Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pEvent As Integer, ByRef pMasterDir As Integer, Optional ByRef pPos As Long = 0) As Integer
Public Declare Function GT_FollowSpace Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pSpace As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_FollowData Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal masterSegment As Long, ByVal slaveSegment As Double, Optional ByVal followType As Integer = FOLLOW_SEGMENT_NORMAL, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_FollowClear Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_FollowStart Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long, ByVal fifoOption As Long) As Integer
Public Declare Function GT_FollowSwitch Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long) As Integer
Public Declare Function GT_SetFollowMemory Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal memory As Integer) As Integer
Public Declare Function GT_GetFollowMemory Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pMemory As Integer) As Integer
Public Declare Function GT_GetFollowStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pFifoNum As Integer, ByRef pSwitchStatus As Integer) As Integer
Public Declare Function GT_SetFollowPhasing Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal profilePhasing As Integer) As Integer
Public Declare Function GT_GetFollowPhasing Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pProfilePhasing As Integer) As Integer

Public Declare Function GT_Compile Lib "gts.dll" (ByVal cardNum As Integer,ByVal pFileName As String, ByRef pWrongInfo As TCompileInfo) As Integer
Public Declare Function GT_Download Lib "gts.dll" (ByVal cardNum As Integer,ByVal pFileName As String) As Integer

Public Declare Function GT_GetFunId Lib "gts.dll" (ByVal cardNum As Integer,ByVal pFunName As String, ByRef pFunId As Integer) As Integer
Public Declare Function GT_Bind Lib "gts.dll" (ByVal cardNum As Integer,ByVal thread As Integer, ByVal funId As Integer, ByVal page As Integer) As Integer

Public Declare Function GT_RunThread Lib "gts.dll" (ByVal cardNum As Integer,ByVal thread As Integer) As Integer
Public Declare Function GT_StopThread Lib "gts.dll" (ByVal cardNum As Integer,ByVal thread As Integer) As Integer
Public Declare Function GT_PauseThread Lib "gts.dll" (ByVal cardNum As Integer,ByVal thread As Integer) As Integer

Public Declare Function GT_GetThreadSts Lib "gts.dll" (ByVal cardNum As Integer,ByVal thread As Integer, ByRef pThreadSts As TThreadSts) As Integer

Public Declare Function GT_GetVarId Lib "gts.dll" (ByVal cardNum As Integer,ByVal pFunName As String, ByVal pVarName As String, ByRef pVarInfo As TVarInfo) As Integer
Public Declare Function GT_SetVarValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal page As Integer, ByRef pVarInfo As TVarInfo, ByRef pValue As Double, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_GetVarValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal page As Integer, ByRef pVarInfo As TVarInfo, ByRef pValue As Double, Optional ByVal count As Integer = 1) As Integer

Public Declare Function GT_SetCrdMapBase Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal base As Integer) As Integer
Public Declare Function GT_GetCrdMapBase Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pBase As Integer) As Integer
Public Declare Function GT_SetCrdSmooth Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pCrdSmooth As TCrdSmooth) As Integer
Public Declare Function GT_GetCrdSmooth Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pCrdSmooth As TCrdSmooth) As Integer
Public Declare Function GT_SetCrdJerk Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal jerkMax As Double) As Integer
Public Declare Function GT_GetCrdJerk Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pJerkMax As Double) As Integer
Public Declare Function GT_SetCrdPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pCrdPrm As TCrdPrm) As Integer
Public Declare Function GT_GetCrdPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pCrdPrm As TCrdPrm) As Integer
Public Declare Function GT_SetArcAllowError Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal error As Double) As Integer
Public Declare Function GT_CrdSpace Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pSpace As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_CrdData Lib "gts.dll" (ByVal cardNum As Integer, ByVal crd As Integer, ByVal pCrdData As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_CrdDataCircle Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pCrdData As TCrdData, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXY Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZ Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZA Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYG0 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZG0 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAG0 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYR Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal radius As Double, ByVal circleDir As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYC Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal circleDir As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZR Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal circleDir As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZC Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal circleDir As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXR Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal radius As Double, ByVal circleDir As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXC Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal circleDir As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYZ Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal interX As Double, ByVal interY As Double, ByVal interZ As Double, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal fifo As Integer = 0) As Integer
